fixed bug with navigation bar styling on mobile

--- a/style.css
+++ b/style.css
@@ -901,9 +901,41 @@ img.large {
   .primary-navigation[data-visible="true"] .nav-dropdown-content {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     padding: 1rem;
     align-items: center;
+    box-shadow: none;
+    background-color: transparent;
+  }
+
+  .nav-dropdown-content a:hover {
+    background-color: transparent;
+  }
+
+  .nav-dropdown-content {
+    position: relative !important;
+  }
+
+  .nav-dropdown-hover-item:hover::after {
+    display: none;
+  }
+
+  .nav-dropdown-content a::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    border-radius: 2px;
+    background-color: black;
+    bottom: 0;
+    left: 0;
+    transform-origin: right;
+    transform: scaleX(0);
+    transition: transform .3s ease-in-out;
+  }
+
+  .nav-dropdown-content a:hover::after {
+    transform-origin: left;
+    transform: scaleX(1);
   }
 
   .primary-navigation[data-visible="true"] .nav-dropdown-content a {
